--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomePage"
+        <activity android:name=".ui.home.HomePage"
             android:theme="@style/AppTheme.NoActionBar"
             />
         <activity android:name=".MainActivity"
