--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.route.newsappc34">
+    package="com.route.newsapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -12,12 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:name=".MyApplication"
+        android:name="com.route.newsapp.MyApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.HomePage"
+        <activity android:name="com.route.newsapp.ui.home.HomePage"
             android:theme="@style/AppTheme.NoActionBar"
             />
-        <activity android:name=".MainActivity"
+        <activity android:name="com.route.newsapp.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
